OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/Onboarding_Status_Rule__c.object-meta.xml
<CustomObject>
    <description
  >Individual rule condition within an Onboarding_Status_Rules_Engine__c that checks if a specific Vendor_Program_Requirement__c has an expected status. Multiple rules are evaluated together based on the parent engine&apos;s Evaluation_Logic__c (ALL/ANY/CUSTOM). Example: A rule might check that the &quot;Insurance Certificate&quot; requirement has status &quot;Approved&quot; before allowing the onboarding to progress to &quot;Pending Initial Review&quot;. Rules are evaluated in Sequence__c order and can short-circuit based on the engine&apos;s logic type.</description>
    <label>Onboarding Status Rule</label>
    <nameField>
        <displayFormat>ONBSR-{00000}</displayFormat>
        <label>Onboarding Status Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Status Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>