OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this rule participates in evaluation.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>