OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Expected_Status__c.field-meta.xml
<CustomField>
    <fullName>Expected_Status__c</fullName>
    <description>Requirement status this rule expects before the engine can set the target status.</description>
    <label>Expected Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>