OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Parent_Rule__c.field-meta.xml
<CustomField>
    <fullName>Parent_Rule__c</fullName>
    <description>Links this rule to its owning status rules engine.</description>
    <label>Parent Rule</label>
    <referenceTo>Onboarding_Status_Rules_Engine__c</referenceTo>
    <relationshipLabel>Onboarding Status Rules</relationshipLabel>
    <relationshipName>Onboarding_Status_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>