OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Each rule checks the status of one specific onboarding requirement that was generated from the Vendor Program Requirement.</description>
    <label>Requirement</label>
    <referenceTo>Vendor_Program_Requirement__c</referenceTo>
    <relationshipLabel>Onboarding Status Rules</relationshipLabel>
    <relationshipName>Onboarding_Status_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>