OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state of the rule (e.g., Draft, Active, Deprecated).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Status_Values</valueSetName>
    </valueSet>
</CustomField>