OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rule__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>e.g. &quot;v1&quot;</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>